compiler/testData/diagnostics/tests/cast/AsErasedError.kt

fun ff(c: MutableCollection<String>) = c <!UNCHECKED_CAST!>as MutableList<Int><!>
